--- a/.github/workflows/code-review.yml
+++ b/.github/workflows/code-review.yml
@@ -40,11 +40,11 @@ jobs:
     
     - name: Run basic code checks
       run: |
-        echo "🔍 Running basic code quality checks..."
+        echo " Running basic code quality checks..."
         echo "========================================"
         
         # File structure analysis
-        echo "## 📁 File Structure Analysis" >> code-review-report.md
+        echo "##  File Structure Analysis" >> code-review-report.md
         echo "" >> code-review-report.md
         echo "### JavaScript Files:" >> code-review-report.md
         find . -name "*.js" -type f | head -20 | while read file; do
@@ -62,52 +62,52 @@ jobs:
         echo "- Total files: $(find . -type f | wc -l)" >> code-review-report.md
         echo "- Total directories: $(find . -type d | wc -l)" >> code-review-report.md
         
-        echo "✅ Basic code checks completed"
+        echo " Basic code checks completed"
     
     - name: Run linter (if package exists)
       if: steps.package-check.outputs.exists == 'true'
       run: |
-        echo "🧹 Running linting..."
+        echo " Running linting..."
         npm run lint 2>/dev/null || echo "⚠ No lint script configured or linting issues found"
         echo "Linting completed"
     
     - name: Check code formatting (if package exists)
       if: steps.package-check.outputs.exists == 'true'
       run: |
-        echo "🎨 Checking code formatting..."
-        npx prettier --check . 2>/dev/null || echo "ℹ️ Prettier not configured or formatting issues found"
+        echo " Checking code formatting..."
+        npx prettier --check . 2>/dev/null || echo "ℹ Prettier not configured or formatting issues found"
     
     - name: Run tests (if package exists)
       if: steps.package-check.outputs.exists == 'true'
       run: |
-        echo "🧪 Running tests..."
+        echo " Running tests..."
         npm test 2>/dev/null || echo "⚠ No tests configured or tests failed"
     
     - name: Security scan
       run: |
-        echo "🔒 Running security checks..."
-        echo "## 🔒 Security Analysis" >> code-review-report.md
+        echo " Running security checks..."
+        echo "##  Security Analysis" >> code-review-report.md
         echo "" >> code-review-report.md
         
         # Check for common security issues
         if find . -name "*.js" -type f -exec grep -l "eval(" {} \; | grep -q .; then
-          echo "❌ Found potential security issue: eval() usage" >> code-review-report.md
+          echo " Found potential security issue: eval() usage" >> code-review-report.md
           find . -name "*.js" -type f -exec grep -l "eval(" {} \; >> code-review-report.md
         else
-          echo "✅ No eval() usage detected" >> code-review-report.md
+          echo " No eval() usage detected" >> code-review-report.md
         fi
         
-        echo "✅ Security scan completed"
+        echo " Security scan completed"
     
     - name: Generate review summary
       run: |
-        echo "## 📊 Code Review Summary" >> code-review-report.md
+        echo "##  Code Review Summary" >> code-review-report.md
         echo "" >> code-review-report.md
         echo "**Review Date:** $(date)" >> code-review-report.md
         echo "**Branch:** ${{ github.head_ref || github.ref }}" >> code-review-report.md
         echo "**Triggered by:** ${{ github.event_name }}" >> code-review-report.md
         echo "" >> code-review-report.md
-        echo "### ✅ Checks Completed:" >> code-review-report.md
+        echo "###  Checks Completed:" >> code-review-report.md
         echo "- File structure analysis" >> code-review-report.md
         echo "- Security scan" >> code-review-report.md
         if [ "${{ steps.package-check.outputs.exists }}" = "true" ]; then
@@ -119,7 +119,7 @@ jobs:
         echo "---" >> code-review-report.md
         echo "*Automated code review by GitHub Actions*" >> code-review-report.md
         
-        echo "📋 Review report generated"
+        echo " Review report generated"
         cat code-review-report.md
     
     - name: Upload review report
@@ -136,7 +136,7 @@ jobs:
     steps:
     - name: Validate PR requirements
       run: |
-        echo "🔍 Validating Pull Request requirements..."
+        echo " Validating Pull Request requirements..."
         echo "=========================================="
         
         # Create validation report
@@ -149,18 +149,18 @@ jobs:
         
         for file in "${ESSENTIAL_FILES[@]}"; do
           if [ -f "$file" ]; then
-            echo "✅ $file - Found" >> pr-validation.md
+            echo " $file - Found" >> pr-validation.md
           else
-            echo "❌ $file - Missing" >> pr-validation.md
+            echo " $file - Missing" >> pr-validation.md
             ALL_PASS=false
           fi
         done
         
         # Check for documentation
         if [ -d "docs" ] || find . -name "*.md" | grep -q .; then
-          echo "✅ Documentation - Found" >> pr-validation.md
+          echo " Documentation - Found" >> pr-validation.md
         else
-          echo "⚠️ Documentation - Limited or missing" >> pr-validation.md
+          echo " Documentation - Limited or missing" >> pr-validation.md
         fi
         
         # Check file sizes
@@ -168,23 +168,23 @@ jobs:
         echo "## File Size Analysis" >> pr-validation.md
         LARGE_FILES=$(find . -type f -size +1M 2>/dev/null | head -5)
         if [ -n "$LARGE_FILES" ]; then
-          echo "⚠️ Large files detected:" >> pr-validation.md
+          echo " Large files detected:" >> pr-validation.md
           echo "$LARGE_FILES" >> pr-validation.md
         else
-          echo "✅ No excessively large files detected" >> pr-validation.md
+          echo " No excessively large files detected" >> pr-validation.md
         fi
         
         # Final status
         echo "" >> pr-validation.md
         if [ "$ALL_PASS" = true ]; then
-          echo "## ✅ PR VALIDATION PASSED" >> pr-validation.md
+          echo "##  PR VALIDATION PASSED" >> pr-validation.md
           echo "All required checks passed successfully!" >> pr-validation.md
         else
-          echo "## ❌ PR VALIDATION FAILED" >> pr-validation.md
+          echo "## PR VALIDATION FAILED" >> pr-validation.md
           echo "Some required checks failed. Please review." >> pr-validation.md
         fi
         
-        echo "📋 Validation completed"
+        echo " Validation completed"
         cat pr-validation.md
     
     - name: Upload validation report
@@ -211,25 +211,25 @@ jobs:
     
     - name: Generate final summary
       run: |
-        echo "🎉 CODE REVIEW WORKFLOW COMPLETED!"
+        echo " CODE REVIEW WORKFLOW COMPLETED!"
         echo "==================================="
         echo ""
-        echo "📋 Workflow: ${{ github.workflow }}"
-        echo "🔢 Run ID: ${{ github.run_id }}"
-        echo "🎯 Trigger: ${{ github.event_name }}"
-        echo "🏷️ PR/Branch: ${{ github.head_ref || github.ref }}"
-        echo "🕒 Completed: $(date)"
+        echo " Workflow: ${{ github.workflow }}"
+        echo " Run ID: ${{ github.run_id }}"
+        echo " Trigger: ${{ github.event_name }}"
+        echo " PR/Branch: ${{ github.head_ref || github.ref }}"
+        echo " Completed: $(date)"
         echo ""
-        echo "📦 Generated Reports:"
+        echo " Generated Reports:"
         echo "   - Code Review Analysis"
         echo "   - PR Validation Report"
         echo ""
-        echo "✅ All analysis jobs completed successfully!"
+        echo " All analysis jobs completed successfully!"
         echo ""
-        echo "📄 Code Review Preview:"
+        echo " Code Review Preview:"
         echo "----------------------"
         cat code-review-report.md | head -20
         echo ""
-        echo "📋 Validation Preview:"
+        echo " Validation Preview:"
         echo "---------------------"
         cat pr-validation.md | head -15
